--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Baloo+Paaji+2&display=swap');
 
 :root {
-  --modal-duration: 1s;
+  --modal-duration: 1.5s;
   --primary-color: #30336b;
   --secondary-color: #be2edd;
 }
@@ -11,6 +11,16 @@
   font-family: 'Baloo Paaji 2', cursive;
   margin: 0;
   padding: 0;
+  outline: none;
+}
+
+body {
+  transition: transform 0.3s ease;
+}
+
+body.show-nav {
+  /* Width of Nav */
+  transform: translate(200px);
 }
 
 nav {
@@ -115,6 +125,10 @@ button:focus {
   bottom: 0;
 }
 
+.modal-container.show-modal {
+  display: block;
+}
+
 .modal {
   background-color: white;
   border-radius: 5px;
@@ -126,6 +140,8 @@ button:focus {
   transform: translate(-50%, -50%);
   max-width: 100%;
   width: 400px;
+  animation-name: modalopen;
+  animation-duration: var(--modal-duration);
 }
 
 .modal-header {
@@ -164,4 +180,13 @@ button:focus {
   top: 0;
   right: 0;
   cursor: pointer;
+}
+
+@keyframes modalopen {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1.5;
+  }
 }
